# main_program

./: .gitignore  README.md  main.py  pyproject.toml  result_sender_thread.py  server.py  server_config_app.py
docs/: CHANGELOG.md
